crates/mcpkit-macros/tests/compile-fail/typo_in_tool_attr.stderr
error: Multiple errors: (Unknown field: `descripion`. Did you mean `description`?, Missing field `description`)
  --> tests/compile-fail/typo_in_tool_attr.rs:10:6
   |
10 |     #[tool(descripion = "test")]  // Typo: "descripion" instead of "description"
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^
